# CAPP

./: .bandit  .env.digitalocean  .env.example  .env.testnet  .flake8  .gitignore  .gitleaks.toml  CLEANUP_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DIGITALOCEAN_DEPLOYMENT_STEPS.md  Dockerfile  GITHUB_SECRETS_REQUIRED.md  LICENSE  PR_DESCRIPTION.md  README.md  alembic.ini  app.yaml  capp_engineering_report.md  debug_feed.py  deploy_bridge_starknet.py  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  env.example  list_models.py  package.json  pyproject.toml  reproduce_chat_failure.py  start-capp.sh  verify_aptos_integration.py  verify_autonomous_brain.py  verify_autonomy.py  verify_bridge.py  verify_compliance.py  verify_dex_swap.py  verify_expansions.py  verify_gemini.py  verify_liquidity_agent.py  verify_market_intel.py  verify_petty_wallet.py  (+10 more)
.github/workflows/: build.yml  deploy.yml  staging.yml  test.yml
.husky/: pre-commit
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_mpesa_and_mmo_callback_tables.py  0002_add_settlements_and_refunds.py  0003_add_fee_schedules_and_risk_rules.py
applications/: README.md
applications/capp/: requirements.txt
applications/capp/capp/: __init__.py  main.py
applications/capp/capp/adapters/: base.py  bridge_base.py  mock_bridge.py  mock_rails.py  yearn.py
applications/capp/capp/agents/: base.py  event_bus.py  payment_saga.py
applications/capp/mcp_server/: server.py
apps/api/app/: config.py  database.py  main.py  models.py  schemas.py  state.py
apps/developer-portal/: docusaurus.config.ts  package-lock.json  package.json
apps/developer-portal/docs/: api-reference.md  quickstart.md
apps/wallet/: Dockerfile  package-lock.json  package.json
apps/wallet/app/: globals.css  layout.tsx
apps/wallet/services/: api.ts
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AiActionFeed.tsx  AiPanel.tsx  AutonomyDial.tsx  Bridge.tsx  BridgeModal.tsx  BridgeWidget.tsx  ComplianceShield.tsx  DepositModal.tsx  FiatModal.tsx  SettingsModal.tsx  StarknetProvider.tsx  TransferForm.tsx  TransferModal.tsx  TreasuryCard.tsx  WithdrawModal.tsx  YieldRadar.tsx
apps/web/hooks/: useTreasury.ts
apps/web/providers/: Web3Provider.tsx
apps/web/services/: api.ts  lifi.ts
capp-recipes/: README.md
capp-recipes/recipes/01-supplier-payment/: README.md  agent.py
capp-recipes/recipes/02-treasury-rebalancing/: README.md  agent.py
capp-recipes/recipes/03-payroll-distribution/: README.md  agent.py
capp-recipes/recipes/04-payment-triggered-workflow/: README.md  agent.py
capp-recipes/recipes/05-smart-escrow-milestone/: README.md  agent.py
capp-recipes/recipes/06-dollar-cost-averaging/: README.md  agent.py
capp-recipes/recipes/07-fx-arbitrage/: README.md  agent.py
capp-recipes/recipes/08-subscription-churn-rescue/: README.md  agent.py
capp-recipes/recipes/09-automated-hedging/: README.md  agent.py
capp-recipes/recipes/10-dao-cfo/: README.md  agent.py
contracts/: testnet_addresses.json
design_specs/: command_and_control_ux.md  ux_audit.md
docs/: AGENT_ANALYSIS.md  AGENT_ARCHITECTURE.md  CORE_EXTRACTION_SUMMARY.md  DATABASE_MIGRATIONS.md  DEPENDENCY_MANAGEMENT.md  DEPLOY_DIGITALOCEAN.md  INTEGRATION_EXTRACTION_SUMMARY.md  MIGRATIONS.md  MIGRATION_SUMMARY.md  ORCHESTRATION_EXTRACTION_SUMMARY.md  PHASE2_README.md  PHASE3_PLAN.md  PHASE3_SUMMARY.md  PHASE_3.2_MMO_INTEGRATION_PLAN.md  PHASE_3A_TEST_REPORT.md  README.md  SECURITY.md  SECURITY_SETUP.md  TESTNET_CHECKLIST.md  TESTNET_SETUP.md  platform-overview.md
docs/capp/: README.md
docs/ci-cd/: README.md
docs/mmo-integration/: README.md
docs/mmo-integration/api/: endpoints.md
docs/mmo-integration/deployment/: configuration.md
docs/mmo-integration/providers/: airtel-money.md  mpesa.md  mtn-momo.md
docs/sdk/: README.md
examples/: README.md
examples/capp_reference/: README.md
examples/custom_agents/: README.md
examples/quickstart/: README.md
scripts/: create_migration.sh  debug_routing.py  deploy_all_testnets.sh  deploy_aptos_testnet.sh  deploy_arbitrum_testnet.sh  deploy_base_testnet.sh  deploy_starknet_testnet.sh  generate_aptos_key.py  generate_polygon_key.py  phase3_implementation.py  setup-dev.sh  setup.sh  start-capp.sh  start-phase3.sh  test-all.sh  test_migration.sh  test_oracle_api.py  test_oracle_sdk.py  test_relayer_billing.py  test_relayer_service.py  test_yield_sdk.py  testnet_faucet.py  verify_chaos.py  verify_headers.py  verify_relayer_agent.py  verify_routing.py  verify_security.py
sdk/: GETTING_STARTED.md  README.md  example.py  setup.py
sdk/canza_agents/: __init__.py  framework.py
sdk/canza_agents/agents/: __init__.py
sdk/canza_agents/integrations/: __init__.py
sdk/examples/capp_reference/: README.md  config.py  main.py  utils.py  validate.py
sdk/examples/custom_agents/: README.md
sdk/examples/quickstart/: README.md  quickstart_example.py
tests/: MPESA_TEST_GUIDE.md  README.md  TESTING_GUIDE.md  conftest.py  test_capp.py  test_security.py
tests/e2e/: test_complete_payment_flow.py
tests/fixtures/: __init__.py  airtel_callbacks.py  mpesa_callbacks.py  mtn_callbacks.py
tests/integration/: test_agent_database_integration.py  test_airtel_money_integration.py  test_mpesa_integration.py  test_mtn_momo_integration.py  test_payment_flow.py  test_sdk_framework.py
tests/performance/: test_sdk_performance.py
tests/unit/: test_exchange_rates.py  test_fee_routing_properties.py  test_health.py  test_metrics.py  test_mmo_availability.py  test_mpesa_repository.py  test_payment_optimizer_agent.py  test_payment_orchestration.py  test_payment_saga.py  test_routing_logic.py  test_yearn_adapter.py  test_yield_service.py
(+171 files in other folders)
